--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -19,12 +19,7 @@
     "description": "Revolutionize inventory management and boost business efficiency with the power of advanced RFID technology and cloud-based low-code platforms.",
     "contact_button": "CONTACT US",
     "solutions_button": "SOLUTIONS",
-    "stats": {
-      "partners": "PARTNERS",
-      "projects": "PROJECTS",
-      "services": "SERVICES",
-      "support": "SUPPORT"
-    },
+     "partners": "PARTNERS", "projects": "PROJECTS ", "services": "SERVICES", "support": "SUPPORT",
     "card": {
       "button1": "LOW-CODE",
       "button2": "RFID",
@@ -106,5 +101,96 @@
     "7r_sub": "As of 2021, the global RFID market was $11.8 billion, and is projected to reach $31.5 billion by 2031.",
     "8r": "PRICE REDUCTION",
     "8r_sub": "When we complete building our factory in the future, chip prices will decrease by at least 30%."
+  },
+   "sistem": {
+    "title": "CHIPMO SYSTEM",
+    "how_it_works": {
+      "title": "How it works?",
+      "description": "The RFID system consists of three main components: tags, readers/encoders, and software. RFID tags consist of a microchip and antenna. You can store any information you want on these tags. Readers/encoders work by providing energy to the tag's antenna, allowing the device to pull the information from the microchip. All this data is integrated by RFID software, which handles important tasks such as analysis, reporting, inventory counting, and connecting with ERP systems."
+    },
+    "implementation": {
+      "title": "How to implement?",
+      "subtitle": "Implementing the Chipmo system will be simple and quick.",
+      "description1": "To simplify implementation, our team will guide you through each step:",
+      "step1": "Step 1: Meeting - We analyze your needs and develop an appropriate solution.",
+      "step2": "Step 2: Implementation - Our team enters system data and makes necessary adjustments.",
+      "step3": "Step 3: Training - We provide comprehensive training to your employees along with manuals.",
+      "step4": "Step 4: Maintenance - We work together continuously for the long term."
+    },
+    "features": {
+      "title": "MAIN FEATURES",
+      "inventory": {
+        "title": "INVENTORY COUNTING:",
+        "description": "Simplify your inventory counting with CHIPMO - RFID system, quickly and accurately counting inventory, saving time and reducing errors."
+      },
+      "sales": {
+        "title": "SALES CONTROL:",
+        "description": "Control your sales with CHIPMO - RFID system, quickly and accurately counting inventory, saving time and reducing errors."
+      },
+      "tracking": {
+        "title": "Real-time Inventory Tracking:",
+        "description": "Track inventory in real-time with CHIPMO - RFID system, quickly and accurately counting inventory, saving time and reducing errors."
+      },
+      "reporting": {
+        "title": "DETAILED REPORTING:",
+        "description": "Generate detailed reports with CHIPMO - RFID system, quickly and accurately counting inventory, saving time and reducing errors."
+      }
+    },
+    "advantages": {
+      "title": "ADVANTAGES",
+      "cloud": {
+        "title": "CLOUD SYSTEM:",
+        "point1": "1. Flexibility and scalability:",
+        "point1_desc": "Easily use cloud systems to meet your growing business needs. You can expand your database anytime without any obstacles.",
+        "point2": "2. Security and reliability:",
+        "point2_desc": "Our solutions follow reliable security standards to protect your data and maintain constant availability while preventing attacks.",
+        "point3": "3. Low cost:",
+        "point3_desc": "Using our cloud system significantly reduces IT costs, paying only for the resources you use without needing to invest in expensive hardware."
+      },
+      "rfid": {
+        "title": "RFID:",
+        "point1": "1. REAL, CLEAR INFORMATION:",
+        "point1_desc": "Monitor and manage inventory and assets in real-time, with the latest reliable information about their location and status.",
+        "point2": "2. HIGH EFFICIENCY:",
+        "point2_desc": "Improve inventory accuracy by automatically collecting information and reducing human errors.",
+        "point3": "3. IMPROVED SECURITY:",
+        "point3_desc": "Accurate monitoring reliably improves the security of your assets, preventing unnecessary losses and theft."
+      },
+      "lowcode": {
+        "title": "LOW-CODE:",
+        "point1": "1. QUICK IMPLEMENTATION",
+        "point1_desc": "Using our low-code platform allows for rapid modification, improvement, and deployment of applications on servers, reducing implementation time.",
+        "point2": "2. CUSTOMIZATION TO YOUR NEEDS",
+        "point2_desc": "Without traditional development, you can adjust our system to meet your business needs and perfectly integrate it with your operations at the field level.",
+        "point3": "3. CONNECTION POSSIBILITIES",
+        "point3_desc": "Easily connect at the API level with existing systems and software, increasing your productivity without any complications with current operations."
+      }
+    }
+  },
+  "contct": {
+    "title": "Contact",
+    "location": "Location",
+    "address": "Address: Ulaanbaatar city, Mongolia",
+    "phone": "Phone: ",
+    "email": "Email: ",
+    "workHours": "Working hours: 24/7",
+    "facebook": "Facebook: Chipmo",
+    "connect": "Contact Us",
+    "yourName": "Your Name*",
+    "country": "Country*",
+    "phoneWhatsapp": "Phone/Whatsapp*",
+    "message": "Message*",
+    "send": "Send",
+    "mapLocation": "CHIPMO Location - MN Tower"
+  },
+  "calcultor": {
+    "title": "RFID Calculator",
+    "subtitle": "Easy equipment price calculation",
+    "chipLabel": "Number of chips:",
+    "chipUnitPrice": "Unit price: $",
+    "readerLabel": "Number of readers:",
+    "readerUnitPrice": "Unit price: $",
+    "totalPrice": "Total price:",
+    "breakdown": " x $ +  x $"
   }
 }
